# astronomy-lover-net-v1

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  justfile  shuttle_postbuild.sh
domain/: Cargo.toml
domain/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package.json  tailwind.config.js  tsconfig.json
frontend/src/: scripts.ts
frontend/src/lib/: app.rs  lib.rs
frontend/src/lib/components/: footer.rs  header.rs  mod.rs
frontend/src/lib/domain/: app_data.rs  mod.rs
frontend/src/lib/views/: home.rs  mod.rs  root.rs
server/: Cargo.toml
server/src/lib/: configuration.rs  errors.rs  lib.rs  service.rs  state.rs  types.rs  utilities.rs
server/src/lib/actors/: fetch.rs
server/src/lib/handlers/: get_nasa_data.rs  mod.rs
server/src/lib/routes/: router.rs
server/src/lib/routes/handlers/: mod.rs
server/tests/api/: analytics.rs  count.rs  helpers.rs  main.rs  ping.rs
site/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
site/scripts/: scripts.js
site/src/lib/: app.rs  domain.rs  lib.rs
site/src/lib/components/: footer.rs  header.rs  mod.rs
site/src/lib/views/: home.rs  mod.rs  root.rs
site/styles/: screen.css
src/lib/: errors.rs  init.rs  lib.rs  middleware.rs  service.rs  state.rs  types.rs
src/lib/actors/: analytics.rs  fetch.rs  files.rs  mod.rs  ping.rs
src/lib/routes/: mod.rs
src/lib/routes/handlers/: count.rs  echo.rs  fetch.rs  health.rs  metrics.rs  mod.rs  ping.rs  static_files.rs
tests/api/: analytics.rs  count.rs  fetch.rs  helpers.rs  main.rs  ping.rs  reset.rs  static_files.rs
