[workspace]
members = [
  "frontend",
  "server",
]

resolver = "3"

default-members = [ "server" ]

[workspace.package]
version = "0.24.0"
edition = "2024"
authors = ["Jeffery D. Mitchell", "<crusty-rustacean@jeff-mitchell.dev>"]
description = "A full stack site which displays the NASA Astronomy image of the day"
readme = "README.md"
repository = "https://github.com/sentinel1909/astronomy-lover-net-v1.git"
license = "MIT"
publish = false