# crusty-rustacean-blog Cargo.toml definition
[package]
name = "astronomy-lover-net-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true


# binary definition
[[bin]]
name = "astronomy-lover-net-server"
path = "src/bin/main.rs"

# library definition
[lib]
name = "astronomy_lover_net_server_lib"
path = "src/lib/lib.rs"

# package dependences
[dependencies]
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.12", features = ["server"] }
http-body-util = "0.1.3"
matchit = "0.8.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-runtime = { version = "0.55.0", features = [ "setup-otel-exporter" ] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["net"] }
tower = "0.5.2"
tracing = "0.1.41"
reqwest = "0.12.15"
url = "2.5.4"

[dev-dependencies]
dotenvy = "0.15.7"
reqwest = "0.12.15"
